# ai-alignment-research

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  RUNPOD_GUIDE.md  check_env.py  runpod_setup.sh
harvard-cs-2881-hw1-RL/: ERA_VALIDATION_GUIDE.md  README.md  README_EXPERIMENT.md  RUNPOD_SETUP.md  notable_people_10k.csv  pyproject.toml
harvard-cs-2881-hw1-RL/archive/old_mab_code/: config.py  data_loading.py  logger.py  main_training.py  openai_client.py  policy.py  run_truthfulqa_experiment.py  setup_training.py
harvard-cs-2881-hw1-RL/outputs/: hellaswag_temporal_classifications_corrected.csv
harvard-cs-2881-hw1-RL/outputs/era_validation/: hellaswag_temporal_classifications_20251119_223311.csv  hellaswag_temporal_classifications_20251120_031050.csv  per_question_results_20251120_063139.csv
harvard-cs-2881-hw1-RL/outputs/runpod_hellaswag_large/: final_evaluation.json  training_config.json
harvard-cs-2881-hw1-RL/scripts/: analyze_results.py  analyze_temporal_results.py  classify_temporal_content.py  run_temporal_experiment_runpod.sh  run_validation_fame_controlled_runpod.sh  run_validation_runpod.sh  test_setup.py  train_policy.py  train_runpod.sh  validate_era_hypothesis.py  validate_era_hypothesis_fame_controlled.py  validate_era_hypothesis_simple.py  validate_temporal_hypothesis.py
harvard-cs-2881-hw1-RL/src/: __init__.py
harvard-cs-2881-hw1-RL/src/benchmarks/: __init__.py  evaluator.py  loader.py
harvard-cs-2881-hw1-RL/src/policy/: __init__.py  prefix_policy.py
harvard-cs-2881-hw1-RL/src/training/: __init__.py  config.py  trainer.py
(+280 files in other folders)
